# mp4fpsmod

./: .gitignore  BUILD_Linux.sh  BUILD_Linux.txt  COPYING  INSTALL  Makefile  Makefile.am  README.rst  bootstrap.sh  configure.ac  getopt.c  getopt.h  main.cpp  mp4filex.cpp  mp4filex.h  mp4trackx.cpp  mp4trackx.h  mp4v2wrapper.cpp  mp4v2wrapper.h  strcnv.h  version.cpp
.github/workflows/: ci.yml
debian/: changelog  control  copyright  mp4fpsmod.install  mp4fpsmod.manpages  rules
man/: mp4fpsmod.1
mp4v2/: CMakeLists.txt  GNUmakefile.am  configure.ac  make_configure  svninfo
mp4v2/include/mp4v2/: project.h
mp4v2/libplatform/: config.h.in
mp4v2/libutil/: Utility.cpp  Utility.h
mp4v2/src/: atom_colr.cpp  atoms.h
mp4v2/util/: mp4extract.cpp  mp4info.cpp  mp4tags.cpp  mp4trackdump.cpp
src/: main.cpp  mp4filex.cpp  mp4filex.h  mp4trackx.cpp  mp4trackx.h  mp4v2wrapper.cpp  strcnv.cpp  version.cpp
vcproj/: mp4fpsmod.sln
vcproj/mp4fpsmod/: mp4fpsmod.vcxproj  mp4fpsmod.vcxproj.filters
vcproj/mp4v2/: mp4v2.vcxproj  mp4v2.vcxproj.filters
